--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
-  "devDependencies": {
-    "typescript": "^4.9.5"
-  }
+	"name": "hello-typescript",
+    "version": "1.0.0",
+  	"main": "index.js",
+  	"scripts": {
+    	"test": "echo \"Error: no test specified\" && exit 1",
+    	"build": "tsc"
+  	},
+  	"repository": {
+    	"type": "git",
+    	"url": "https://github.com/zahnom/hello-typescript.git"
+   	},
+    "dependencies": {
+    },
+  	"devDependencies": {
+    	"typescript": "^4.9.5"
+  	},
+ 	"homepage": "https://github.com/zahnom/hello-typescript#readme"
 }
