--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "hello-typescript",
+	"name": "@zahnom/hello-typescript",
     "version": "1.0.0",
   	"main": "index.js",
   	"scripts": {
