--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@zahnom/hello-typescript",
     "version": "1.0.0",
-  	"main": "index.js",
+  	"main": "build/index.js",
   	"scripts": {
     	"test": "echo \"Error: no test specified\" && exit 1",
     	"build": "tsc"
